now removed scrollbar correctly without affecting scroll

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,10 @@ body {
   background-color: #242424;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   cursor: default;
-  overflow: hidden;
+}
+
+body::-webkit-scrollbar{
+  display: none;
 }
 
 h4 {
@@ -45,7 +48,7 @@ nav > img {
   display: flex;
   flex-grow: 1;
   overflow: hidden;
-  height: auto;
+  height: 100%;
 }
 
 @media (width < 1000px) {
